# sdl2-gaming

./: .gitmodules  CMakeLists.txt  LICENSE
include/game/: Background.hpp  Constants.hpp  DrawableTextInformation.hpp  Drop.hpp  Dropper.hpp  Font.hpp  Game.hpp  GameObject.hpp  GameState.hpp  MainMenu.hpp  Player.hpp  Sprite.hpp  Vector2.hpp
src/: Background.cpp  CMakeLists.txt  Dropper.cpp  Font.cpp  Game.cpp  GameObject.cpp  GameState.cpp  MainMenu.cpp  Player.cpp  Sprite.cpp  Vector2.cpp  main.cpp
